Changes in Projects IMG

--- a/index.html
+++ b/index.html
@@ -441,8 +441,34 @@ Smartphone Compatible web template, free webdesigns for Nokia, Samsung, LG, Sony
 									</div>
 								</div>
 								<div class="col-md-3 team-gd ">
-									<a href="#portfolioModal7" class="portfolio-link b-link-diagonal b-animate-go" data-toggle="modal"><img src="images/work3.png" alt="" width="400" height="350">
-									</a>
+									<div class="thumb">
+									    <a href="#portfolioModal7" class="portfolio-link b-link-diagonal b-animate-go" data-toggle="modal"><img src="images/work3.png" alt="" width="400" height="350">
+									    </a>
+									</div>
+								</div>
+								<div class="col-md-3 team-gd ">
+									<div class="thumb">
+									    <a href="#portfolioModal7" class="portfolio-link b-link-diagonal b-animate-go" data-toggle="modal"><img src="images/work5.png" alt="" width="400" height="350">
+									    </a>
+									</div>
+								</div>
+								<div class="col-md-3 team-gd ">
+									<div class="thumb">
+									    <a href="#portfolioModal7" class="portfolio-link b-link-diagonal b-animate-go" data-toggle="modal"><img src="images/work4.png" alt="" width="400" height="350">
+									    </a>
+									</div>
+								</div>
+								<div class="col-md-3 team-gd ">
+									<div class="thumb">
+									    <a href="#portfolioModal7" class="portfolio-link b-link-diagonal b-animate-go" data-toggle="modal"><img src="images/work6.png" alt="" width="400" height="350">
+									    </a>
+									</div>
+								</div>
+								<div class="col-md-3 team-gd ">
+									<div class="thumb">
+									    <a href="#portfolioModal7" class="portfolio-link b-link-diagonal b-animate-go" data-toggle="modal"><img src="images/work2.png" alt="" width="400" height="350">
+									    </a>
+									</div>
 								</div>
 								<div class="clearfix"></div>
 							</div>
