--- a/index.html
+++ b/index.html
@@ -390,7 +390,7 @@ Smartphone Compatible web template, free webdesigns for Nokia, Samsung, LG, Sony
 									</a>
 								</div>
 								<div class="col-md-3 team-gd yes_marg ">
-									<a href="#portfolioModal8" class="portfolio-link b-link-diagonal b-animate-go" data-toggle="modal"><img src="images/picc3.jpg" alt="" width="350" height="350">
+									<a href="#portfolioModal8" class="portfolio-link b-link-diagonal b-animate-go" data-toggle="modal"><img src="images/picc3.JPG" alt="" width="350" height="350">
 									</a>
 								</div>
 								<div class="col-md-3 team-gd yes_marg ">
@@ -410,7 +410,7 @@ Smartphone Compatible web template, free webdesigns for Nokia, Samsung, LG, Sony
 									</a>
 								</div>
 								<div class="col-md-3 team-gd yes_marg ">
-									<a href="#portfolioModal8" class="portfolio-link b-link-diagonal b-animate-go" data-toggle="modal"><img src="images/picc4.jpg" alt="" width="350" height="350">
+									<a href="#portfolioModal8" class="portfolio-link b-link-diagonal b-animate-go" data-toggle="modal"><img src="images/picc4.JPG" alt="" width="350" height="350">
 									</a>
 								</div>
 								<div class="col-md-3 team-gd yes_marg ">
