--- a/index.html
+++ b/index.html
@@ -802,7 +802,7 @@ Smartphone Compatible web template, free webdesigns for Nokia, Samsung, LG, Sony
 					<p>&copy; Madhuparna Upadhyay . All rights reserved</p>
 					<ul class="social-icons two">
 						<li><a href="#"> </a></li>
-						<li><a href="#" class="fb"> </a></li>
+						<li><a href="https://www.facebook.com/madhuparna.upadhyay" class="fb"> </a></li>
 						<li><a href="#" class="in"> </a></li>
 						<li><a href="#" class="dott"> </a></li>
 					</ul>
