--- a/index.html
+++ b/index.html
@@ -787,7 +787,7 @@ Smartphone Compatible web template, free webdesigns for Nokia, Samsung, LG, Sony
 						<li><a href="#"> </a></li>
 						<li><a href="https://www.facebook.com/madhuparna.upadhyay" class="fb"> </a></li>
 						<li><a href="https://plus.google.com/u/2/109107924409258887086" class="in"> </a></li>
-						<li><a href="#" class="dott"> </a></li>
+						<li><a href="https://www.linkedin.com/in/madhuparna-upadhyay/" class="dott"> </a></li>
 					</ul>
 			</div>
 		</div>
