--- a/index.html
+++ b/index.html
@@ -775,10 +775,10 @@ Smartphone Compatible web template, free webdesigns for Nokia, Samsung, LG, Sony
 				<div class="copy_right text-center">
 					<p>&copy; Madhuparna Upadhyay . All rights reserved</p>
 					<ul class="social-icons two">
-						<li><a href="#"> </a></li>
 						<li><a href="#" class="fb"> </a></li>
 						<li><a href="#" class="in"> </a></li>
-						<li><a href="#" class="dott"> </a></li>
+						<li><a href="#" class="git"> </a></li>
+						<li><a href="#" class="gplus"> </a></li>
 					</ul>
 			</div>
 		</div>
