Changed quality property of images

--- a/index.html
+++ b/index.html
@@ -383,7 +383,7 @@
 									</a>
               </div>
               <div class="col-md-3 team-gd yes_marg ">
-                <a href="#portfolioModal8" class="portfolio-link b-link-diagonal b-animate-go" data-toggle="modal"><img src="http://res.cloudinary.com/dawbiue3n/image/upload/w_auto,q_auto:low,f_auto/v1530033116/Portfolio/picc3.JPG" alt="" width="350" height="350">
+                <a href="#portfolioModal8" class="portfolio-link b-link-diagonal b-animate-go" data-toggle="modal"><img src="http://res.cloudinary.com/dawbiue3n/image/upload/w_auto,q_50,f_auto/v1530033116/Portfolio/picc3.JPG" alt="" width="350" height="350">
 									</a>
               </div>
               <div class="col-md-3 team-gd yes_marg ">
@@ -399,11 +399,11 @@
 									</a>
               </div>
               <div class="col-md-3 team-gd yes_marg ">
-                <a href="#portfolioModal8" class="portfolio-link b-link-diagonal b-animate-go" data-toggle="modal"><img src="http://res.cloudinary.com/dawbiue3n/image/upload/w_auto,q_auto:low,f_auto/v1530033116/Portfolio/picc2.jpg" alt="" width="350" height="350">
+                <a href="#portfolioModal8" class="portfolio-link b-link-diagonal b-animate-go" data-toggle="modal"><img src="http://res.cloudinary.com/dawbiue3n/image/upload/w_auto,q_50,f_auto/v1530033116/Portfolio/picc2.jpg" alt="" width="350" height="350">
 									</a>
               </div>
               <div class="col-md-3 team-gd yes_marg ">
-                <a href="#portfolioModal8" class="portfolio-link b-link-diagonal b-animate-go" data-toggle="modal"><img src="http://res.cloudinary.com/dawbiue3n/image/upload/w_auto,q_auto:low,f_auto/v1530033116/Portfolio/picc4.JPG" alt="" width="350" height="350">
+                <a href="#portfolioModal8" class="portfolio-link b-link-diagonal b-animate-go" data-toggle="modal"><img src="http://res.cloudinary.com/dawbiue3n/image/upload/w_auto,q_50,f_auto/v1530033116/Portfolio/picc4.JPG" alt="" width="350" height="350">
 									</a>
               </div>
               <div class="col-md-3 team-gd yes_marg ">
@@ -415,7 +415,7 @@
 									</a>
               </div>
               <div class="col-md-3 team-gd yes_marg ">
-                <a href="#portfolioModal8" class="portfolio-link b-link-diagonal b-animate-go" data-toggle="modal"><img src="http://res.cloudinary.com/dawbiue3n/image/upload/w_auto,q_auto:low,f_auto/v1530033116/Portfolio/picc1.jpg" alt="" width="350" height="350">
+                <a href="#portfolioModal8" class="portfolio-link b-link-diagonal b-animate-go" data-toggle="modal"><img src="http://res.cloudinary.com/dawbiue3n/image/upload/w_auto,q_50,f_auto/v1530033116/Portfolio/picc1.jpg" alt="" width="350" height="350">
 									</a>
               </div>
               <div class="clearfix"></div>
