Fixed broken image

--- a/index.html
+++ b/index.html
@@ -453,7 +453,7 @@
 									</a>
               </div>
               <div class="col-md-3 team-gd ">
-                <a href="#portfolioModal2" class="portfolio-link b-link-diagonal b-animate-go" data-toggle="modal"><img src="http://res.cloudinary.com/dawbiue3n/image/h_350/upload/w_auto,q_auto,f_auto/v1530033116/Portfolio/new3.jpeg" alt="" width="350" height="350">
+                <a href="#portfolioModal2" class="portfolio-link b-link-diagonal b-animate-go" data-toggle="modal"><img src="http://res.cloudinary.com/dawbiue3n/image/upload/h_350/w_auto,q_auto,f_auto/v1530033119/Portfolio/new3.jpg" alt="" width="350" height="350">
 									</a>
               </div>
               <div class="col-md-3 team-gd ">
