--- a/index.html
+++ b/index.html
@@ -758,10 +758,12 @@
 				<div class="copy_right text-center">
 					<p>&copy; Madhuparna Upadhyay . All rights reserved</p>
 					<ul class="social-icons two">
-						<li><a href="#"> </a></li>
-						<li><a href="https://www.facebook.com/madhuparna.upadhyay" class="fb"> </a></li>
-						<li><a href="https://plus.google.com/u/2/109107924409258887086" class="in"> </a></li>
-						<li><a href="https://www.linkedin.com/in/madhuparna-upadhyay/" class="dott"> </a></li>
+					<li><a href="https://www.facebook.com/madhuparna.upadhyay" class="fb"> </a>
+            				</li>
+            				<li><a href="https://www.linkedin.com/in/madhuparna-upadhyay/" class="in"> 
+            				</a></li>
+            				<li><a href="https://github.com/MadhuparnaUpadhyay" class="git"> </a></li>
+            				<li><a href="https://plus.google.com/u/2/109107924409258887086" class="gplus"> </a></li>
 					</ul>
 			</div>
 		</div>
