Removed phone number and added skype id

--- a/index.html
+++ b/index.html
@@ -11,6 +11,7 @@
   <!-- Custom Theme files -->
   <link href="css/style.css" rel='stylesheet' type='text/css' />
   <link rel="shortcut icon" type="image/png" href="images/maddy.jpeg" />
+  <link rel="stylesheet" href="https://use.fontawesome.com/releases/v5.1.0/css/all.css" integrity="sha384-lKuwvrZot6UHsBSfcMvOkWwlCMgc0TaWr+30HWe3a4ltaBwTZhyTEggF5tJv8tbt" crossorigin="anonymous">
   <!-- Custom Theme files -->
   <meta name="viewport" content="width=device-width, initial-scale=1">
   <meta http-equiv="Content-Type" content="text/html; charset=utf-8" />
@@ -724,10 +725,10 @@
 						</div>
 							<div class="contact-grid1-left">
 								<div class="contact-grid1-left1">
-									<span class="glyphicon glyphicon-earphone" aria-hidden="true"></span>
-									<h4>Contact By Phone</h4>
+									<span class="glyphicon fab fa-skype" aria-hidden="true"></span>
+									<h4>Contact By Skype</h4>
 									<ul>
-										<li>Phone: +918339096796</li>
+										<li>yesitsmadhuparna@gmail.com</li>
 									</ul>
 								</div>
 							</div>
