--- a/index.html
+++ b/index.html
@@ -737,7 +737,7 @@
 									<span class="glyphicon glyphicon-home" aria-hidden="true"></span>
 									<h4>Looking For Address</h4>
 									<ul>
-										<li>Address: Vaswani Reserve, Kadubesanhalli, Bangalore</li>
+										<li>Address: NS Residency, Chikka Adugodi, BTM Stage 1, Bengaluru</li>
 										<li>India.</li>
 									</ul>
 								</div>
