--- a/index.html
+++ b/index.html
@@ -55,6 +55,7 @@
                   <li><a class="scroll" data-hover="Portfolio" href="#port">Portfolio</a></li>
                   <li><a class="scroll" data-hover="Blog" href="#blogs">Blog</a></li>
                   <li><a class="scroll" data-hover="Contact" href="#contact">Contact</a></li>
+		  <li><a  data-hover="Resume" href="https://drive.google.com/file/d/1h5G5IYoveGpMGDVUYXsKdFO3zo--rve2/view" target="_blank">Resume</a></li>
                 </ul>
               </nav>
               <!-- script-for-menu -->
@@ -636,6 +637,9 @@
         </div>
         <div class="clearfix"></div>
       </div>
+      <div class="One text-center resume-head">
+      <h4> <a href="https://drive.google.com/file/d/1h5G5IYoveGpMGDVUYXsKdFO3zo--rve2/view" target= "_blank">Resume </a></h4>
+    </div>
     </div>
   </div>
   <!-- top-grids -->
