--- a/index.html
+++ b/index.html
@@ -15,7 +15,8 @@
   <!-- Custom Theme files -->
   <meta name="viewport" content="width=device-width, initial-scale=1">
   <meta http-equiv="Content-Type" content="text/html; charset=utf-8" />
-  <meta name="keywords" content="Madhu Madhuparna Madhuparna Upadhyay Upadhyay FireCompass KIIT Fire Compass" />
+  <meta name="keywords" content="Madhu,Madhuparna,Madhuparna Upadhyay,Upadhyay FireCompass,KIIT,Fire Compass" />
+  <meta name="description" content="Cyber security based skills and work with firecompass.Adventure loving, benevolent, Painter, Numismatic,Prisoner of creativity, knowledge. A person who is Software Engineer by profession and artists by choice. Known as blue diamond Maddy becoz of her variety of specialisations" />
   <!---- start-smoth-scrolling---->
   <script type="text/javascript" src="js/move-top.js"></script>
   <script type="text/javascript" src="js/easing.js"></script>
